<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="110dp"
        android:layout_marginTop="32dp"
        android:background="#B2BEB5"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_add_a_photo_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_add_image" />

    <Button
        android:id="@+id/button"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="@+id/txtremark"
        app:layout_constraintStart_toStartOf="@+id/txtremark"
        app:layout_constraintTop_toBottomOf="@+id/txtremark" />

    <EditText
        android:id="@+id/txtname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="Enter Name"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/txtlotno"
        android:layout_width="142dp"
        android:layout_height="47dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="Enter Lot Number"
        android:ems="10"
        android:hint="@string/lot_no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:textStyle="normal|italic"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtname" />

    <EditText
        android:id="@+id/txtpieces"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="Enter Pieces Count"
        android:ems="10"
        android:hint="@string/pieces"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:textStyle="normal|italic"
        app:layout_constraintEnd_toEndOf="@+id/txtsizelen"
        app:layout_constraintStart_toStartOf="@+id/txtsizelen"
        app:layout_constraintTop_toBottomOf="@+id/txtsizelen" />

    <EditText
        android:id="@+id/txtremark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="Enter Your Remark"
        android:ems="10"
        android:hint="@string/remark"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:textStyle="normal|italic"
        app:layout_constraintEnd_toEndOf="@+id/txtsqft"
        app:layout_constraintStart_toStartOf="@+id/txtsqft"
        app:layout_constraintTop_toBottomOf="@+id/txtsqft" />

    <EditText
        android:id="@+id/txtsizelen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="Enter Length"
        android:ems="10"
        android:hint="@string/size_length"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:textStyle="normal|italic"
        app:layout_constraintEnd_toEndOf="@+id/txtlotno"
        app:layout_constraintStart_toStartOf="@+id/txtlotno"
        app:layout_constraintTop_toBottomOf="@+id/txtlotno" />

    <EditText
        android:id="@+id/txtsizebred"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="Enter Width"
        android:ems="10"
        android:hint="@string/size_width"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="20sp"
        android:textStyle="normal|italic"
        app:layout_constraintEnd_toEndOf="@+id/txtthickness"
        app:layout_constraintStart_toStartOf="@+id/txtthickness"
        app:layout_constraintTop_toBottomOf="@+id/txtthickness" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="206dp" />

    <EditText
        android:id="@+id/txtsqft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="Click for Sqft"
        android:ems="10"
        android:hint="@string/sq_ft"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="20sp"
        android:textStyle="normal|italic"
        app:layout_constraintEnd_toEndOf="@+id/btnCalculate"
        app:layout_constraintStart_toStartOf="@+id/txtpieces"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

    <EditText
        android:id="@+id/txtthickness"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="35dp"
        android:autofillHints="Enter Thickness"
        android:ems="10"
        android:hint="@string/thickness"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txtname" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="@+id/txtsizebred"
        app:layout_constraintStart_toStartOf="@+id/txtsizebred"
        app:layout_constraintTop_toBottomOf="@+id/txtsizebred" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="105dp"
        android:layout_height="44dp"
        android:text="@string/calculateOnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>